--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f6f7f9;
   margin: 0;
@@ -31,11 +35,13 @@ p {
 .post .header {
   height: 60px;
 }
-.post .header > * {
+.post .header > *,
+.chats .chat .header > * {
   display: inline-block;
   vertical-align: middle;
 }
-.post .header img {
+.post .header img,
+.chats .chat .header img {
   width: 50px;
   height: 50px;
   margin: 5px;
@@ -55,7 +61,7 @@ form {
   padding-bottom: 20px;
 }
 form textarea {
-  width: calc(100% - 20px);
+  width: 100%;
   padding: 10px;
   border-color: #bbb;
 }
@@ -67,4 +73,140 @@ form [type="submit"] {
   border-radius: 5px;
   font-size: 14px;
   float: right;
+}
+
+.optimistic {
+  -webkit-animation: scale-up 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: scale-up 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@-webkit-keyframes scale-up {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes scale-up {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.chats {
+  background-color: #eee;
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  border-left: 1px solid #c3c3c3;
+}
+.chats .chat {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+}
+
+.chats .chat .header > div {
+  font-size: 16px;
+  margin-left: 5px;
+}
+.chats .chat h2,
+.chats .chat span {
+  color: #333;
+  font-size: 16px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+.chats .chat .header span {
+  color: #333;
+  font-size: 12px;
+}
+
+.chatWindow {
+  width: 250px;
+  float: right;
+  background-color: #eee;
+  height: 300px;
+  margin-right: 10px;
+  border-left: 1px solid #c3c3c3;
+  border-right: 1px solid #c3c3c3;
+}
+
+.chatWindow .header {
+  background-color: #c3c3c3;
+  padding: 10px;
+}
+
+.chatWindow .header .close {
+  float: right;
+  border: none;
+  background: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.chatWindow .header .close:focus {
+  outline: none;
+}
+
+.chatWindow .messages {
+  overflow-y: scroll;
+  height: calc(100% - 75px);
+}
+
+.chatWindow .messages .message {
+  width: 80%;
+  border: 1px solid #4079f3;
+  margin: 2px;
+  border-radius: 5px;
+
+  margin: 5px 0px;
+  padding: 5px;
+}
+
+.chatWindow .messages .message.left {
+  background-color: #78a3ff;
+  color: #fff;
+  float: left;
+}
+
+.chatWindow .messages .message.right {
+  float: right;
+  background-color: #e8f4fb;
+  color: #000;
+}
+
+.openChats {
+  position: fixed;
+  right: 250px;
+  width: calc(100% - 200px);
+  bottom: 0;
+}
+
+.wrapper {
+  height: 100%;
+  right: 0;
+  top: 0;
+}
+
+.chatWindow .input input {
+  border: none;
+  padding: 10px;
+  width: 100%;
+}
+.chatWindow .input input:focus {
+  outline: none;
 }
