--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,3 +210,44 @@ form [type="submit"] {
 .chatWindow .input input:focus {
   outline: none;
 }
+
+.bouncer {
+  margin: 20px auto;
+  border-radius: 100%;
+  -webkit-animation: bounce 1s infinite ease-in-out;
+  animation: bounce 1s infinite ease-in-out;
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-animation: scale(0);
+  }
+  100% {
+    -webkit-animation: scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.message {
+  margin: 20px auto;
+  padding: 5px;
+  max-width: 400px;
+}
+.error.message {
+  border-radius: 5px;
+  background-color: #fff7f5;
+  border: 1px solid #ff9566;
+  width: 100%;
+}
