--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,7 @@ form [type="submit"] {
 }
 
 .topbar .inner .search {
-  height: calc(100% - 30px);
+  height: calc(100% - 20px);
   padding: 10px;
   width: 50%;
   display: inline-block;
@@ -326,7 +326,7 @@ form [type="submit"] {
 .topbar .inner .search input {
   border: none;
   height: 100%;
-  padding: 5px 10px;
+  padding: 0;
   width: 100%;
   outline: none;
 }
@@ -383,12 +383,39 @@ form [type="submit"] {
   background-color: #fff;
 }
 
-.login form {
+.authModal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   display: flex;
+  justify-content: center;
+}
+
+.authModal > div {
+  display: flex;
+  justify-content: center;
   flex-direction: column;
 }
 
-.login form input {
-  padding: 10px;
-  margin-bottom: 20px;
+.authModal > div form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-width: 200px;
+  border: 1px solid #333;
+  background-color: #fff;
+  padding: 20px;
+}
+
+.authModal > div form input {
+  border: 1px solid #c3c3c3;
+  padding: 5px;
+}
+
+.authModal > div form input[type="submit"] {
+  width: 100px;
+  float: right;
+  margin-top: 10px;
 }
