added profile page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,3 +457,22 @@ button.uploadAvatar {
   float: right;
   margin-top: 10px;
 }
+
+.post .header a > * {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.topbar .buttons {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  height: calc(100% - 10px);
+}
+
+.topbar .buttons > * {
+  height: 100%;
+  margin-right: 5px;
+  border: none;
+  border-radius: 5px;
+}
